--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8080
 # MySQL???????
 spring.datasource.url=jdbc:mysql://localhost:3306/child_posture_management_system
 spring.datasource.username=root
-spring.datasource.password=040508
+spring.datasource.password=your_password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # =============== MyBatis Configuration ===============
