--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,16 +2,22 @@ server.port=8080
 
 # =============== Data Source Configuration ===============
 # MySQL???????
-spring.datasource.url=jdbc:mysql://localhost:3306/child_posture_management_system
+spring.datasource.url=jdbc:mysql://115.157.200.58:3306/doctor
 spring.datasource.username=root
-spring.datasource.password=your_password
+spring.datasource.password=123456MySql
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # =============== MyBatis Configuration ===============
 # MyBatis???????
-mybatis.config-location=classpath:mybatis/mybatis-config.xml
+#mybatis.config-location=classpath:mybatis/mybatis-config.xml
 # MyBatis????
-mybatis.type-aliases-package=org.example.backend.mybatis.entity
+#mybatis.type-aliases-package=org.example.backend.mybatis.entity
+#mybatis.type-aliases-package=org.example.backend.entity
 # ??MyBatis???????
-mybatis.mapper-locations=classpath:mapper/*.xml
+#mybatis.mapper-locations=classpath:mapper/*.xml
+
+# mybatis-plus
+mybatis-plus.type-aliases-package=org.example.backend.entity
+mybatis-plus.mapper-locations=classpath*:mapper/*.xml
+
 
