--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,8 +9,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # =============== MyBatis Configuration ===============
 # MyBatis???????
-mybatis.config-location=classpath:mybatis/mybatis-config.xml
+mybatis.config-location=classpath:config/mybatis-config.xml
 # MyBatis????
 mybatis.type-aliases-package=org.example.backend.entity
-# ??MyBatis???????
-mybatis.mapper-locations=classpath:mapper/*.xml
