--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 mybatis.config-location=classpath:config/mybatis-config.xml
 # MyBatis????
 mybatis.type-aliases-package=org.example.backend.entity
+
+#redis config
