--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 server.port=8080
+#QQemail
+mail.user=3087675598@qq.com
+mail.password=xaoscerqxquvdeci
 
 # =============== Data Source Configuration ===============
 # MySQL???????
