修复查询不到id的bug

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,4 @@ mybatis.config-location=classpath:config/mybatis-config.xml
 mybatis.type-aliases-package=org.example.backend.entity
 
 #redis config
+spring.cache.type=redis
