加入redis的配置与邮箱验证码实现

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,5 @@ mybatis.type-aliases-package=org.example.backend.entity
 
 #redis config
 spring.cache.type=redis
+spring.data.redis.host=115.157.200.58
+spring.data.redis.port=6379
