--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,8 @@ mybatis.type-aliases-package=org.example.backend.entity
 spring.cache.type=redis
 spring.data.redis.host=115.157.200.58
 spring.data.redis.port=6379
+
+# file maxsize 10MB
+spring.servlet.multipart.max-file-size=10MB
+# 10MB
+spring.servlet.multipart.max-request-size=10MB
