--- a/pom.xml
+++ b/pom.xml
@@ -120,7 +120,11 @@
       <scope>test</scope>
     </dependency>
 
-
+    <dependency>
+      <groupId>commons-httpclient</groupId>
+      <artifactId>commons-httpclient</artifactId>
+      <version>3.1</version>
+    </dependency>
   </dependencies>
 
   <dependencyManagement>
