--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ mail.password=xaoscerqxquvdeci
 
 # =============== Data Source Configuration ===============
 # MySQL???????
-spring.datasource.url=jdbc:mysql://115.157.200.58:3306/DoctorAndChild?useUnicode=true&characterEncoding=utf8
+spring.datasource.url=jdbc:mysql://115.157.200.58:3306/DoctorChild?useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
 spring.datasource.password=123456MySql
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
