--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,9 @@ mail.password=xaoscerqxquvdeci
 
 # =============== Data Source Configuration ===============
 # MySQL???????
-spring.datasource.url=jdbc:mysql://115.157.200.58:3306/DoctorChild?useUnicode=true&characterEncoding=utf8
+spring.datasource.url=jdbc:mysql://1.95.130.39:3306/DoctorChild?useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
-spring.datasource.password=123456MySql
+spring.datasource.password=D8VigSpowt?d666
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # =============== MyBatis Configuration ===============
@@ -18,7 +18,7 @@ mybatis.type-aliases-package=org.example.backend.entity
 
 #redis config
 spring.cache.type=redis
-spring.data.redis.host=115.157.200.58
+spring.data.redis.host=1.95.130.39
 spring.data.redis.port=6379
 
 # file maxsize 10MB
