--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,6 +20,8 @@ mybatis.type-aliases-package=org.example.backend.entity
 spring.cache.type=redis
 spring.data.redis.host=1.95.130.39
 spring.data.redis.port=6379
+spring.data.redis.username=Redis666
+spring.data.redis.password=myRedis
 
 # file maxsize 10MB
 spring.servlet.multipart.max-file-size=10MB
