增加管理员医院管理接口，增，删，改医院地址，改医院管理员，获取分页查询医院

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 mybatis.config-location=classpath:config/mybatis-config.xml
 # MyBatis????
 mybatis.type-aliases-package=org.example.backend.entity
+mybatis.mapper-locations=classpath:mapper/*.xml
 
 #redis config
 spring.cache.type=redis
@@ -27,3 +28,9 @@ spring.data.redis.password=myRedis
 spring.servlet.multipart.max-file-size=10MB
 # 10MB
 spring.servlet.multipart.max-request-size=10MB
+
+
+pagehelper.helperDialect=mysql
+pagehelper.reasonable=true
+pagehelper.supportMethodsArguments=true
+pagehelper.params=count=countSql
