--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,11 @@
-server.port=8080
+
+
+server.port=8081
+
+server.ssl.key-store= classpath:scs1733562700390_zeropw.cn_server.jks
+server.ssl.key-alias= zeropw.cn_cs2412071711s6mmr
+server.ssl.key-store-password=Ed6=feu@nRM3Qw3r
+
 #QQemail
 mail.user=3087675598@qq.com
 mail.password=xaoscerqxquvdeci
