配置tomcat同时启动http和https

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,13 @@
+# HTTP Server Configuration
+server.http.port=8080
 
-
+# HTTPS Server Configuration
 server.port=8081
-
 server.ssl.key-store= classpath:scs1733562700390_zeropw.cn_server.jks
 server.ssl.key-alias= zeropw.cn_cs2412071711s6mmr
 server.ssl.key-store-password=Ed6=feu@nRM3Qw3r
+server.ssl.keyStoreType=JKS
+server.ssl.keyAlias=tomcat
 
 #QQemail
 mail.user=3087675598@qq.com
